app front redirection feature

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -17,11 +17,11 @@
 
 	<section class="action-container">
 		<form class="chat-input-component">
-      <div class="wrapper-input group">
-        <div name="chat-input" contenteditable="true" type="contenteditable" data-placeholder="Commencer une discussion..." class="textarea-input chat-input">
-        </div>
-        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
-      </div>
+	      <div class="wrapper-input group">
+	        <div name="ai-input" contenteditable="true" type="contenteditable" data-placeholder="Commencer une discussion..." class="textarea-input chat-input">
+	        </div>
+	        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
+	      </div>
 	  </form>
   </section>
 </div>
