--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -1,5 +1,8 @@
 <div class="lily-page-cont"> <!--wrapper page les différentes pages-->
 	<section class="lily-main-content">
+
+    <button class="btn btn--nostyle btn-close"><span class="lily-icon lily-icon-cross"></span></button>
+
 	  <div class="lily-contact-form">
 		<p class="lily-contact-form-label">Adresse e-mail <label class="from" style="display:none">Ce champ ne peut pas être vide.</label></p>
 		<input id="from" class="lily-cst-form-color" type="text" name="from" placeholder="Votre adresse e-mail" size="30"/>
