--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -14,12 +14,6 @@
   <link rel="stylesheet" href="{{ asset('css/app/lily.css') }}" type="text/css" />
   <link rel="stylesheet" href="http://cdn-saio.fr/customer/{{ licence }}/css/lily-custom.css" type="text/css" />
 
-  <!--[if lt IE 9]>
-    <script src="{{ asset('js/ie/respond.js') }}" cache="false"></script>
-    <script src="{{ asset('js/ie/html5.js') }}" cache="false"></script>
-    <script src="{{ asset('js/ie/fix.js') }}" cache="false"></script>
-  <![endif]-->
-
 {% endblock %}
 
 </head>
@@ -133,7 +127,7 @@
 	{% endblock %}
 
 	{% block bootstrap %}
-		{% autoescape false %}
+    {% autoescape false %}
 		<script type="text/javascript">
 			var config = {{ config|serialize('json') }};
 	    config.licence = "{{ licence }}";
@@ -148,6 +142,7 @@
 		</script>
 
 		<script>
+		  // Google Analytics integration:
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -159,7 +154,13 @@
 			ga('create', 'UA-58975501-1', 'auto');
 	    {% endif %}
 		</script>
-		{% endautoescape %}
+
+    <!-- start Mixpanel -->
+    <script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+mixpanel.init("a5f27c1b7c228141acba66fd159f1937");
+    </script><!-- end Mixpanel -->
+    {% endautoescape %}
 	{% endblock %}
 
 {% endblock %}
