--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -1,44 +1,37 @@
 <div id="lily-home" class="lily-page-cont"><!-- wrapper page les différentes pages -->
 	<section class="lily-main-content">
 	  {% if config.chat and chatAvailable %}
-		<header id="lily-header" class="lily-cst-header">
+<!-- 		<header id="lily-header" class="lily-cst-header">
 			<a href="#/chat" class=""><p>Parler à un conseiller<i class="lily-icon lily-icon-arrow-right"></i></p></a>
-		</header>
+		</header> -->
 	  {% endif %}
 
 	    <div class="avatar-wrapper">
-	      <img class="avatar" src="https://files.slack.com/files-pri/T02SBQCVC-F04KWHX21/belette_anime.png">
+	      <img class="avatar" src="http://cdn-saio.fr/customer/{{licence}}/images/avatar2x.png">
 	    </div>
 		<section class="lily-avatar-wrapper">
 			{# http://cdn-saio.fr/customer/{licence}/templates/avatar-svg.html.twig
 			{% include '@customer/'~licence~'/templates/avatar-svg.html.twig' %}
 			<img src="{{asset('customer/'~licence~'/images/universe.png')}}" class="lily-cst-universe" class="lily-cst-universe" /> #}
-			<canvas id="canvas" width="380" height="460"></canvas>
-		</section>
+    </section>
 		<div class="lily-box-messages scrollable">
 		<!-- Here goes the bubbles-->
 		</div>
 	</section>
-	<!-- <section class="lily-search lily-cst-search lily-search-open" id="lily-search"> -->
-<!-- 		<form id="lily-search-form">
-			<div class="lily-search-input-wrap">
-				<input class="lily-search-input lily-cst-search-input" placeholder="Quelle est votre question ?" type="text" value="" name="s" id="s">
-			</div>
-			<span class="lily-icon lily-icon-search"></span>
-			<input class="lily-search-submit" type="submit" id="lily-go" value="">
-		</form> -->
-  <!-- </section> -->
 
   <section class="action-container">
-		<form class="chat-input-component">
-      <div class="wrapper-input group">
-        <div name="chat-input" contenteditable="true" type="contenteditable" data-placeholder="Poser une question..." class="textarea-input chat-input">
-        </div>
-<!--         <div class="placeholder-input">
-          Envoyer un message
-        </div> -->
-        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
-      </div>
+		<form class="avi-input-component">
+	      <div class="wrapper-input group">
+	        <div name="avi-input" contenteditable="true" type="contenteditable" data-placeholder="Poser une question..." class="textarea-input avi-input">
+	        </div>
+
+	        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
+	      </div>
 	  </form>
+	  <footer class="brand-footer">
+  		<a class="saio-brandmark" href="www.saio.fr" alt="saio.fr" rel="_blank">
+        Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand.png">
+      </a>
+	  </footer>
   </section>
 </div>
