--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
@@ -125,7 +125,7 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = window.config || {};
-        config.root = '{{ app.request.getBaseURL() }}/api/statistics';
+        config.root = '{{ app.request.getBaseURL() }}/api';
         config.wsserver = '{{ ws_host }}';
         config.licence = '{{ app.user.client.licence }}';
 	    </script>
