--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -53,11 +53,7 @@
         var config = window.config || {};
         config.root = '{{ app.request.getBaseURL() }}/api';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
-        {% if app.environment == 'dev' %}
-        config.wsserver = 'ws://develop.saio.fr';
-        {% else %}
-        config.wsserver = 'ws://ws.saio.fr';
-        {% endif %}
+        config.wsserver = "{{ ws_host }}";
         config.licence = '{{ app.user.client.licence }}';
 	    </script>
     {% endautoescape %}
