--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -131,6 +131,7 @@
 		<script type="text/javascript">
 			var config = {{ config|serialize('json') }};
 		    config.licence = "{{ licence }}";
+		    config.synapsePassword = "{{ synapsePassword }}";
 	    	config.root = '{{ app.request.getBaseURL() }}/app';
 		    config.chatAvailable = "{{ chatAvailable }}";
 		    config.avi.redirections.values = {{redirection|serialize('json') }};
