saio brand logo in chat

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -23,5 +23,10 @@
 	        <button class="btn btn-sendmsg btn--nostyle">envoyer</button>
 	      </div>
 	  </form>
+	  <footer class="brand-footer">
+  		<a class="saio-brandmark" href="www.saio.fr" alt="saio.fr" rel="_blank">
+        Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
+      </a>
+	  </footer>
   </section>
 </div>
