commented out 'avi history' in lc infos in bo (was showing no info)

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
@@ -21,7 +21,7 @@
     <input class="informations-form-control" name="email" value="<% if (email !== null) { %><%= email %> <% } else { %> Inconnu <% } %>">
   </p>
 
-  <p><b>Questions posées à l'avatar :</b></p>
+  <!-- <p><b>Questions posées à l'avatar :</b></p> -->
   
   <% if (questions.length) { _.each(questions, function(question) { %>
     <ul class="informations-list">
