--- a/web/css/backoffice/main.css
+++ b/web/css/backoffice/main.css
@@ -33,6 +33,10 @@
   padding-bottom: 12px;
 }
 
+.bg-dark .nav li > ul.dropdown-menu > li > a:hover {
+  color: #6A92E4;
+}
+
 #chatModal {
   display: none;
 }
