--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -519,24 +519,17 @@ LIVE CHAT
 .conversation-header p {
   margin-left: 5px;
   width: 100%;
-  max-width: -moz-calc(100% - 250px);
-  max-width: -webkit-calc(100% - 250px);
-  max-width: -o-calc(100% - 250px);
-  max-width: calc(100% - 250px);
+  max-width: -moz-calc(100% - 310px);
+  max-width: -webkit-calc(100% - 310px);
+  max-width: -o-calc(100% - 310px);
+  max-width: calc(100% - 310px);
 }
 
 .conversation-header-control {
   color: #6e7d83;
   font-size: 12px;
   font-weight: 600;
-}
-
-.conversation-close {
-  color: #6e7d83;
-  font-size: 18px;
-  float: right;
-  margin: 13px 0 0 2px;
-  cursor: pointer;
+  margin-top: 10px;
 }
 
 .conversation-minus {
@@ -547,12 +540,20 @@ LIVE CHAT
   cursor: pointer;
 }
 
-.conversation-close:hover, .ban:hover, .transfer:hover {
+.conversation-close:hover,
+.ban:hover,
+.transfer:hover {
   color: #576064;
 }
 
-.conversation-header-control .transfer, .ban {
+.conversation-header-control .transfer,
+.conversation-header-control .ban,
+.conversation-header-control .conversation-close{
   cursor: pointer;
+  display: inline-block;
+  padding: 5px 8px 5px 0px;
+  border: solid 1px rgba(206, 206, 206, 0.65);
+  border-radius: 3px;
 }
 
 .conversation-footer  {
