copy update (some hardcoded and will need abstraction in global conf file for next clients

--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -23,7 +23,7 @@
 	<div class="app-wrapper">
 		<div id="lily-toolbar" class="lily-cst-toolbar">
 			<span class="lily-icon lily-left lily-bt-menu lily-icon-menu"></span>
-			<div id="lily-toolbar-name" class="lily-cst-toolbar-name"><!-- {{ config.avi.name }} -->Posez toutes vos questions!</div>
+			<div id="lily-toolbar-name" class="lily-cst-toolbar-name">{{ config.avi.name }}</div>
 			<div id="lily-toolbar-icons" class="lily-cst-toolbar-icons">
 			  <div class="lily-icon-reduce"></div>
 			</div>
