--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -14,7 +14,7 @@
 			<img src="{{asset('customer/'~licence~'/images/universe.png')}}" class="lily-cst-universe" class="lily-cst-universe" /> #}
 		<div class="lily-box-messages scrollable">
 			<div class="lily-msg-chat-wait">
-				<p>Bonjour, je suis Eric, le conseiller virtuel d'SOS Malus. Vous pouvez me poser vos questions</p>
+				<p>Posez vos questions sur SOS-Malus à Eric notre assistant virtuel</p>
 			</div>
 			<!-- Here goes the bubbles-->
 		</div>
