--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -9,7 +9,7 @@
 			<div id="chat-box-messages" class="chat-messages scrollable">
 			<!-- Here goes the bubbles-->
 			  <div class="lily-msg-chat-wait">
-			    <p>Bonjour. Veuillez poser votre question, un opérateur va y répondre.</p>
+			    <p>Posez votre question. Un conseiller SOS Malus vous répondra le plus rapidement possible. </p>
 			  </div>
 			</div>
 		</section>
