--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -4,8 +4,8 @@
     <button class="btn btn--nostyle btn-close"><span class="lily-icon lily-icon-cross"></span></button>
 
 	  <div class="lily-contact-form">
-  		
-      <h4 class="form-section-title">Votre demande</h4>
+
+      <h4 class="form-section-title">Renseignez les informations ci-dessous afin qu'un conseiller puisse traiter votre demande</h4>
 
       <p class="lily-contact-form-label">
   			Adresse e-mail *
@@ -18,7 +18,7 @@
         <label class="object" style="display:none">Ce champ ne peut pas être vide.</label>
       </p>
   		<input id="object" class="lily-cst-form-color" type="text" name="object" placeholder="L'objet de votre demande" size="30"/>
-		
+
       <p class="lily-contact-form-label">
         Message *
         <label class="msg" style="display:none">Ce champ ne peut pas être vide.</label>
@@ -34,7 +34,7 @@
         <label class="tel" style="display:none">Ce champ ne peut pas être vide.</label>
       </p>
       <input class="lily-cst-form-color form-tel" type="tel" pattern="[0-9]{10}" name="tel" 
-             placeholder="numéro sur lequel vous joindre" size="30"/>
+             placeholder="Numéro sur lequel vous joindre" size="30"/>
 
       <p class="lily-contact-form-label">
         Date à laquelle vous souhaitez être rappelé(e) *
