KB modal fix 2 (template) \o/

--- a/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
@@ -23,7 +23,7 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default btn-cancel">
+  <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">
     Annuler
   </button>
   <button type="button" class="btn btn-primary btn-update">
