fix saio.fr link prepending iframe domain

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -24,7 +24,7 @@
 	      </div>
 	  </form>
 	  <footer class="brand-footer">
-  		<a class="saio-brandmark" href="www.saio.fr" alt="saio.fr" rel="_blank">
+  		<a class="saio-brandmark" href="http://www.saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
         Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
       </a>
 	  </footer>
