--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -75,9 +75,11 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = window.config || {};
+        config.ws = {};
         config.root = '{{ app.request.getBaseURL() }}/api';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
-        config.wsserver = "{{ ws_host }}";
+        config.ws.host = "{{ ws_host }}";
+        config.ws.protocol = "{{ ws_protocol }}";
         config.licence = '{{ app.user.client.licence }}';
 	    </script>
     {% endautoescape %}
