--- a/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
+++ b/src/Lily/StatisticsBundle/Resources/views/Statistics/index.html.twig
@@ -125,8 +125,10 @@
     {% autoescape false %}
       <script type="text/javascript">
         var config = window.config || {};
+        config.ws = {};
         config.root = '{{ app.request.getBaseURL() }}/api';
-        config.wsserver = '{{ ws_host }}';
+        config.ws.host = "{{ ws_host }}";
+        config.ws.protocol = "{{ ws_protocol }}";
         config.licence = '{{ app.user.client.licence }}';
 	    </script>
     {% endautoescape %}
