--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -30,7 +30,7 @@
 	      </div>
 	  </form>
 	  <footer class="brand-footer">
-  		<a class="saio-brandmark" href="http://www.saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
+  		<a class="saio-brandmark" href="http://saio.fr" alt="saio.fr" target="_blank" rel="nofollow">
         Créé par <img class="saio-logo" src="http://cdn-saio.fr/customer/{{licence}}/images/saioBrand2x.png">
       </a>
 	  </footer>
