show alert when bad command is typed

--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -80,6 +80,9 @@ filter='cssrewrite' %}
   <script type="text/template" id="liveConversationShellSuggestionsItemTpl">
     {% include 'LilyBackOfficeBundle:Utils/Chat/Conversation/Shell/Suggestions:item.html.twig' %}
   </script>
+  <script type="text/template" id="liveConversationShellAlertTpl">
+    {% include 'LilyBackOfficeBundle:Utils/Chat/Conversation/Shell:alert.html.twig' %}
+  </script>
   <script type="text/template" id="liveInformationsTpl">
     {% include 'LilyBackOfficeBundle:Utils/Chat:informations.html.twig' %}
   </script>
