fix command title not showed in tpl

--- a/web/css/components/chat.css
+++ b/web/css/components/chat.css
@@ -48,7 +48,7 @@ LIVE CHAT
 .shell-alert {
   padding: 10px;
   margin-bottom: 10px;
-  background: #FF7A7A;
+  background: #A5A5A5;
   text-align: center;
   border-radius: 2px;
   color: white;
