fix to UI issues in different browsers in front app

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_completion.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_completion.html.twig
@@ -1,3 +1,5 @@
-<p>Pour quelle raison ?</p>
+<div class="msg-wrapper">
+	<p>Pour quelle raison ?</p>
 	<li class='lily-precision-list lily-completion-incomplete'>La réponse est incomplete</i>
 	<li class='lily-precision-list lily-completion-incorrect'>La réponse était incorrecte</i>
+</li>
