--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_notation.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_notation.html.twig
@@ -1,2 +1,4 @@
-<i class="lily-notation-list lily-icon lily-icon-thumb-up lily-cst-icon-thumb-up"></i>
-<i class="lily-notation-list lily-icon lily-icon-thumb-down lily-cst-icon-thumb-down"></i>
+<div class="msg-wrapper">
+	<i class="lily-notation-list lily-icon lily-icon-thumb-up lily-cst-icon-thumb-up"></i>
+	<i class="lily-notation-list lily-icon lily-icon-thumb-down lily-cst-icon-thumb-down"></i>
+</div>
