fix weird scroll bug on reload

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/avi.html.twig
@@ -10,7 +10,7 @@
       <img class="avatar" src="http://cdn-saio.fr/customer/{{licence}}/images/avatars/avatar2x.png">
     </div>
 
-		<div class="lily-box-messages scrollable">
+		<div class="lily-box-messages">
 			<div class="lily-msg-chat-wait">
 				<p>Posez vos questions sur SOS-Malus à Labelette notre assistant virtuel</p>
 			</div>
