--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/chat.html.twig
@@ -6,7 +6,7 @@
 	{% endif %}
 	<section class="lily-main-content">
 		<section class="lily-avatar-wrapper">
-			<div id="chat-box-messages" class="chat-messages scrollable">
+			<div id="chat-box-messages" class="chat-messages">
 			<!-- Here goes the bubbles-->
 			  <div class="lily-msg-chat-wait">
 			    <p>Posez votre question. Un conseiller SOS Malus vous répondra le plus rapidement possible. </p>
