--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -27,8 +27,10 @@ filter='cssrewrite' %}
   
   <!-- BEGIN TRACKJS -->
 {% if app.environment == 'prod' %}
-  <script type="text/javascript">window._trackJs = { token: '55945a6850454d3d8ecba78c5b307b8a' };</script>
-  <script type="text/javascript" src="//d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js" crossorigin="anonymous"></script>
+<script
+  src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+  data-apikey="38313d808c52c00caa38aeed097efd1d">
+</script>
 {% endif %}
   <!-- END TRACKJS -->
 
