--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -16,6 +16,15 @@
 
 {% endblock %}
 
+  <!-- BEGIN BUGSNAG -->
+  {% if app.environment == 'prod' %}
+  <script
+    src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
+    data-apikey="47bb0c88dadd95fd355d758cc434a7b7">
+  </script>
+  {% endif %}
+  <!-- END BUGSNAG -->
+
 </head>
 <body>
 
