--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -25,14 +25,14 @@ filter='cssrewrite' %}
 
 {% endstylesheets %}
   
-  <!-- BEGIN TRACKJS -->
+  <!-- BEGIN BUGSNAG -->
 {% if app.environment == 'prod' %}
 <script
   src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
   data-apikey="38313d808c52c00caa38aeed097efd1d">
 </script>
 {% endif %}
-  <!-- END TRACKJS -->
+  <!-- END BUGSNAG -->
 
 {% endblock %}
 
